# GUPos

./: Algebra.cpp  Algebra.h  CMakeLists.txt  Geodesy.cpp  Geodesy.h  GnssData.cpp  GnssData.h  GnssInsFilter.cpp  GnssInsFilter.h  GuConfig.cpp  GuConfig.h  ImuData.cpp  ImuData.h  InsMechanizer.cpp  InsMechanizer.h  KalmanFilter.hpp  README.md  String.cpp  String.h  ZeroDetector.cpp  ZeroDetector.h  conf.ini  conf_cover.ini  main.cpp
Configure/: GuConfig.cpp  GuConfig.h  conf_cover.ini  conf_open.ini
GUCore/: GnssData.cpp  GnssData.h  GnssInsFilter.cpp  GnssInsFilter.h  ImuData.cpp  ImuData.h  InsMechanizer.cpp  InsMechanizer.h  KalmanFilter.hpp  ZeroDetector.cpp  ZeroDetector.h
Utility/: Algebra.cpp  Algebra.h  Geodesy.cpp  Geodesy.h  String.cpp  String.h
